// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info-popup-form Renders \`info-popup-form\` with custom props 1`] = `
<div
  class="layout column"
>
  <div
    class="v-input v-text-field v-select theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Column
          </label>
          <div
            class="v-select__selections"
          >
            <input
              aria-label="Column"
              aria-readonly="false"
              autocomplete="on"
              name="column"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
  <text-editor-field-stub
    config="[object Object]"
    errormessages=""
    label=""
    name="template"
    value="template"
  />
</div>
`;

exports[`info-popup-form Renders \`info-popup-form\` with custom props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              [object Object]
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`info-popup-form Renders \`info-popup-form\` with default props 1`] = `
<div
  class="layout column"
>
  <div
    class="v-input v-text-field v-select theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Column
          </label>
          <div
            class="v-select__selections"
          >
            <input
              aria-label="Column"
              aria-readonly="false"
              autocomplete="on"
              name="column"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
  <text-editor-field-stub
    config="[object Object]"
    errormessages=""
    label=""
    name="template"
    value=""
  />
</div>
`;

exports[`info-popup-form Renders \`info-popup-form\` with default props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <div
          class="v-list__tile theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              No data available
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
